# arduino-debug

./: CMakeLists.txt
cmake/: arduino-avr-toolchain.cmake
src/: ArduinoDebugConfig.cmake.in  CMakeLists.txt  serial_debug.c  serial_debug.h
tests/: CMakeLists.txt  test_dump_register.c  test_send_data.c  test_usart0.c  test_wrapper.sh
